added inital inputs

--- a/popup.html
+++ b/popup.html
@@ -1,16 +1,113 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-  <head>
+
+<head>
+    <title>Supreme</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <style>
-      button {
-        height: 30px;
-        width: 30px;
-        outline: none;
-      }
+        /* Modal Structure */
+        html,
+        body {
+            font-family: 'Open Sans', sans-serif;
+            font-size: 14px;
+            margin: 0;
+            min-height: 180px;
+            padding: 0;
+            width: 384px;
+        }
+
+        h1 {
+            font-family: 'Menlo', monospace;
+            font-size: 22px;
+            font-weight: 400;
+            margin: 0;
+            color: #2f5876;
+        }
+
+        a:link,
+        a:visited {
+            color: #000000;
+            outline: 0;
+            text-decoration: none;
+        }
+
+        img {
+            width: 30px;
+        }
     </style>
-  </head>
-  <body>
-      <p>Welcome to an extension</p>
-    <button id="changeColor"></button>
-  </body>
+    <script src="popup.js"></script>
+</head>
+
+<body>
+    <div class="modal-header">
+        <h1 class="logo">Supreme Loader
+            <span class="version">(1.0.0)</span>
+        </h1>
+    </div>
+    <div class="modal-content">
+        <h3>Never take another L again</h3>
+        <h4>Shipping Info</h4>
+        <form class="form-inline" action="">
+            <div class="form-group">
+                <label for="street">Address</label>
+                <input type="text" class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="city">City</label>
+                <input type="text" class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="state">State</label>
+                <input type="text" class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="zipCode">Zip Code</label>
+                <input type="text" class="form-control">
+            </div>
+            <div class="form-group">
+                    <label for="phNum">Phone Number</label>
+                    <input type="text" class="form-control"> 
+                </div>
+        </form>
+    </div>
+        <h4>Billing Info</h4>
+        <form class="form-inline" action="">
+                <div class="form-group">
+                        <label for="ccNum">Credit Card Number</label>
+                        <input type="text" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="expDate">Expiration Date</label>
+                        <input type="text" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="secuCode">Security Code</label>
+                        <input type="text" class="form-control">
+                    </div>
+        </form>
+        <hr>
+        <h4>Item Info</h4>
+        <form class="form-inline">
+            <div class="form-group">
+                <label for="supItem">Item</label>
+                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Item name">
+            </div>
+            <div class="form-group">
+                <label for="supSize">Size</label>
+                <select class="form-control" id="exampleFormControlSelect1">
+                    <option>Small</option>
+                    <option>Medium</option>
+                    <option>Large</option>
+                    <option>Extra Large</option>
+                </select>
+            </div>
+        </form>
+        <button type="button" class="btn btn-primary">Confirm</button>
+    </div>
+</body>
+
 </html>
