working on making the logic work

--- a/popup.html
+++ b/popup.html
@@ -39,7 +39,6 @@
             width: 30px;
         }
     </style>
-    <script src="popup.js"></script>
 </head>
 
 <body>
@@ -106,8 +105,9 @@
                 </select>
             </div>
         </form>
-        <button type="button" class="btn btn-primary">Confirm</button>
+        <button type="button" class="btn btn-primary" id="loadVar">Confirm</button>
     </div>
+    <script src="popup.js"></script>
 </body>
 
 </html>
